--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -685,6 +685,7 @@ $btn-gap: 0.8rem; // for the bottom icons
 $btn-border-width: 3px;
 $btn-mb: 0.5rem;
 
+
 #sidebar {
   @include pl-pr(0);
 
@@ -695,7 +696,10 @@ $btn-mb: 0.5rem;
   overflow-y: auto;
   width: $sidebar-width;
   z-index: 99;
-  background: var(--sidebar-bg);
+  background: var(--sidebar-bg); 
+  background-image: url('/assets/img/bg.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
 
   /* Hide scrollbar for Chrome, Safari and Opera */
   &::-webkit-scrollbar {
@@ -724,13 +728,22 @@ $btn-mb: 0.5rem;
     box-shadow: var(--avatar-border-color) 0 0 0 2px;
     transform: translateZ(0); /* fixed the zoom in Safari */
 
-    img {
+    /*img {
       transition: transform 0.5s;
 
       &:hover {
         transform: scale(1.2);
       }
-    }
+    }*/
+	div {
+		width: 100%;
+		height: 100%;
+		background-image: url('/assets/img/avatar.png');
+		background-size: cover;
+		background-repeat: no-repeat;
+		position: relative;
+		z-index: 100;
+	}
   }
 
   .profile-wrapper {
