--- a/_sass/colors/dark-typography.scss
+++ b/_sass/colors/dark-typography.scss
@@ -33,8 +33,8 @@
     rgba(255, 255, 255, 0) 100%
   );
 
-  /* Sidebar */
-  --site-title-color: #717070;
+  /* Sidebar 
+  --site-title-color: #FFFFFF;
   --site-subtitle-color: #6d6c6b;
   --sidebar-bg: radial-gradient(circle, #242424 0%, #1d1f27 100%);
   --sidebar-muted-color: #6d6c6b;
@@ -42,7 +42,18 @@
   --sidebar-hover-bg: rgb(54, 54, 54, 0.33);
   --sidebar-btn-bg: rgb(84, 83, 83, 0.3);
   --sidebar-btn-color: #787878;
-  --avatar-border-color: rgb(206, 206, 206, 0.9);
+  --avatar-border-color: rgb(206, 206, 206, 0.9); */
+  
+  --site-title-color: #FFFFFF;
+  --site-subtitle-color: #6d6c6b;
+  --sidebar-bg: radial-gradient(circle, #242424 0%, #1d1f27 100%);
+  --sidebar-muted-color: #6d6c6b;
+  --sidebar-active-color: rgb(255, 255, 255, 0.95);
+  --sidebar-hover-bg: rgb(54, 54, 54, 0.33);
+  --sidebar-btn-bg: white;
+  --sidebar-btn-color: #8e8e8e;
+  --avatar-border-color: white;
+  
 
   /* Topbar */
   --topbar-bg: rgb(27, 27, 30, 0.64);
